# forecast-assistant

./: .env.template  .gitignore  .ruff.toml  CHANGELOG.md  Makefile  Pulumi.yaml  README.md  __main__.py  constraints.txt  cookiecutter.json  mypy.ini  prompts.yml  pyproject.toml  rebuild_kedro.sh  requirements.txt  set_env.sh
.github/: pull_request_template.md
assets/: store_sales_predict.csv
forecastic/: api.py  credentials.py  deployments.py  i18n.py  openapi.json  predict.py  resources.py  rest_api.py  (+2 more)
recipe-forecastic-reactic/: .gitignore  pyproject.toml
recipe-forecastic-reactic/conf/: logging.yml
recipe-forecastic-reactic/conf/base/: catalog_deploy_application.yml  catalog_deploy_forecast.yml  example-globals.yml
recipe-forecastic-reactic/conf/base/ai_catalog_datasource/: parameters_deploy_application.yml  parameters_deploy_forecast.yml  parameters_load_datasets.yml
recipe-forecastic-reactic/conf/base/file_datasource/: parameters_deploy_application.yml  parameters_deploy_forecast.yml
recipe-forecastic-reactic/include/app_react/: app.py  local_helpers.py
recipe-forecastic-reactic/include/app_streamlit/: local_helpers.py
recipe-forecastic-reactic/src/recipe_forecastic_reactic/: __main__.py  hooks.py  pipeline_registry.py
recipe-forecastic-reactic/src/recipe_forecastic_reactic/pipelines/deploy_application/: pipeline.py
recipe-forecastic-reactic/src/recipe_forecastic_reactic/pipelines/deploy_forecast/: nodes.py  pipeline.py
recipe-forecastic-reactic/src/recipe_forecastic_reactic/pipelines/load_datasets_from_ai_catalog/: nodes.py  pipeline.py
(+125 files in other folders)
